--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,18 +9,18 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">38,370</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">40,119</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.unionmutualproject.Dashboard</td><td><a href="#m0">DashboardPage</a></td><td rowspan="1">1737112294865</td><td rowspan="1">4415</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.unionmutualproject.Dashboard</td><td><a href="#m1">Transaction</a></td><td rowspan="1">1737112299284</td><td rowspan="1">2080</td></tr><tr class="passedeven"><td><a href="#m2">login</a></td><td rowspan="1">1737112301366</td><td rowspan="1">20213</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.unionmutualproject.CreateQuote</td><td><a href="#m0">createQuote</a></td><td rowspan="1">1737714655441</td><td rowspan="1">2118</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.unionmutualproject.CreateQuote</td><td><a href="#m1">DashboardPage</a></td><td rowspan="1">1737714674367</td><td rowspan="1">8828</td></tr><tr class="passedeven"><td><a href="#m2">Transaction</a></td><td rowspan="1">1737714683196</td><td rowspan="1">2137</td></tr><tr class="passedeven"><td><a href="#m3">login</a></td><td rowspan="1">1737714657565</td><td rowspan="1">16801</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.unionmutualproject.Dashboard#DashboardPage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: An element could not be located on the page using the given search parameters.
+<h2>Default test</h2><h3 id="m0">com.unionmutualproject.CreateQuote#createQuote</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: An element could not be located on the page using the given search parameters.
 For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
 Build info: version: &apos;4.13.0&apos;, revision: &apos;ba948ece5b*&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;22.0.1&apos;
-Driver info: io.appium.java_client.AppiumDriver
-Command: [3bc388bf-5110-4ff0-91f7-e1dde2db606c, findElement {using=xpath, value=//android.view.View[@content-desc=&quot;Agent&quot;]}]
-Capabilities {appium:appActivity: com.odysseynext.unionmutual..., appium:appPackage: com.odysseynext.unionmutual, appium:automationName: uiAutomator2, appium:databaseEnabled: false, appium:desired: {appActivity: com.odysseynext.unionmutual..., appPackage: com.odysseynext.unionmutual, automationName: uiAutomator2, deviceName: Nothing phone(1), platformName: ANDROID, platformversion: 14, uuid: 192.168.0.108:5555}, appium:deviceApiLevel: 34, appium:deviceManufacturer: Nothing, appium:deviceModel: A063, appium:deviceName: P12278000659, appium:deviceScreenDensity: 420, appium:deviceScreenSize: 1080x2400, appium:deviceUDID: P12278000659, appium:javascriptEnabled: true, appium:locationContextEnabled: false, appium:networkConnectionEnabled: true, appium:pixelRatio: 2.625, appium:platformVersion: 14, appium:platformversion: 14, appium:statBarHeight: 136, appium:takesScreenshot: true, appium:uuid: 192.168.0.108:5555, appium:viewportRect: {height: 2264, left: 0, top: 136, width: 1080}, appium:warnings: {}, appium:webStorageEnabled: false, platformName: ANDROID}
-Session ID: 3bc388bf-5110-4ff0-91f7-e1dde2db606c
+Driver info: io.appium.java_client.android.AndroidDriver
+Command: [75282d1b-29d4-4d80-9b00-d429dafdd422, findElement {using=-android uiautomator, value=new UiSelector().description(&quot;Open navigation menu&quot;)}]
+Capabilities {appium:appActivity: com.odysseynext.unionmutual..., appium:appPackage: com.odysseynext.unionmutual, appium:automationName: uiAutomator2, appium:databaseEnabled: false, appium:desired: {appActivity: com.odysseynext.unionmutual..., appPackage: com.odysseynext.unionmutual, automationName: uiAutomator2, deviceName: Test Device, platformName: ANDROID, platformversion: 14, uuid: emulator-5554}, appium:deviceApiLevel: 35, appium:deviceManufacturer: Nothing, appium:deviceModel: A063, appium:deviceName: P12278000659, appium:deviceScreenDensity: 420, appium:deviceScreenSize: 1080x2400, appium:deviceUDID: P12278000659, appium:javascriptEnabled: true, appium:locationContextEnabled: false, appium:networkConnectionEnabled: true, appium:pixelRatio: 2.625, appium:platformVersion: 15, appium:platformversion: 14, appium:statBarHeight: 136, appium:takesScreenshot: true, appium:uuid: emulator-5554, appium:viewportRect: {height: 2264, left: 0, top: 136, width: 1080}, appium:warnings: {}, appium:webStorageEnabled: false, platformName: ANDROID}
+Session ID: 75282d1b-29d4-4d80-9b00-d429dafdd422
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
@@ -31,10 +31,10 @@ Session ID: 3bc388bf-5110-4ff0-91f7-e1dde2db606c
 	at io.appium.java_client.remote.AppiumCommandExecutor.execute(AppiumCommandExecutor.java:250)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
 	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:66)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:359)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:353)
-	at com.unionmutualproject.Dashboard.DashboardPage(Dashboard.java:12)
+	at com.unionmutualproject.CreateQuote.createQuote(CreateQuote.java:23)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
@@ -62,7 +62,8 @@ Session ID: 3bc388bf-5110-4ff0-91f7-e1dde2db606c
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.unionmutualproject.Dashboard#Transaction</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.unionmutualproject.Dashboard#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.unionmutualproject.CreateQuote#DashboardPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.unionmutualproject.CreateQuote#Transaction</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.unionmutualproject.CreateQuote#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
