--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Taurus11\AppData\Local\Temp\testng-eclipse--816105754\testng-customsuite.xml</span>
+                    <span>C:\Users\Taurus11\AppData\Local\Temp\testng-eclipse--221972852\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                    <span class="method-stats">4 methods, 1 failed,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.unionmutualproject.Dashboard" class="method navigator-link" hash-for-method="DashboardPage">DashboardPage</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.unionmutualproject.CreateQuote" class="method navigator-link" hash-for-method="createQuote">createQuote</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -118,12 +118,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.unionmutualproject.Dashboard" class="method navigator-link" hash-for-method="Transaction">Transaction</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.unionmutualproject.CreateQuote" class="method navigator-link" hash-for-method="DashboardPage">DashboardPage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.unionmutualproject.Dashboard" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.unionmutualproject.CreateQuote" class="method navigator-link" hash-for-method="Transaction">Transaction</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.unionmutualproject.CreateQuote" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,22 +146,22 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.unionmutualproject.Dashboard</span>
+              <span class="class-name">com.unionmutualproject.CreateQuote</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="DashboardPage">
-                  </a> <!-- DashboardPage -->
-                  <span class="method-name">DashboardPage</span>
+                  <a name="createQuote">
+                  </a> <!-- createQuote -->
+                  <span class="method-name">createQuote</span>
                   <div class="stack-trace">org.openqa.selenium.NoSuchElementException: An element could not be located on the page using the given search parameters.
 For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
 Build info: version: &apos;4.13.0&apos;, revision: &apos;ba948ece5b*&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;22.0.1&apos;
-Driver info: io.appium.java_client.AppiumDriver
-Command: [3bc388bf-5110-4ff0-91f7-e1dde2db606c, findElement {using=xpath, value=//android.view.View[@content-desc=&quot;Agent&quot;]}]
-Capabilities {appium:appActivity: com.odysseynext.unionmutual..., appium:appPackage: com.odysseynext.unionmutual, appium:automationName: uiAutomator2, appium:databaseEnabled: false, appium:desired: {appActivity: com.odysseynext.unionmutual..., appPackage: com.odysseynext.unionmutual, automationName: uiAutomator2, deviceName: Nothing phone(1), platformName: ANDROID, platformversion: 14, uuid: 192.168.0.108:5555}, appium:deviceApiLevel: 34, appium:deviceManufacturer: Nothing, appium:deviceModel: A063, appium:deviceName: P12278000659, appium:deviceScreenDensity: 420, appium:deviceScreenSize: 1080x2400, appium:deviceUDID: P12278000659, appium:javascriptEnabled: true, appium:locationContextEnabled: false, appium:networkConnectionEnabled: true, appium:pixelRatio: 2.625, appium:platformVersion: 14, appium:platformversion: 14, appium:statBarHeight: 136, appium:takesScreenshot: true, appium:uuid: 192.168.0.108:5555, appium:viewportRect: {height: 2264, left: 0, top: 136, width: 1080}, appium:warnings: {}, appium:webStorageEnabled: false, platformName: ANDROID}
-Session ID: 3bc388bf-5110-4ff0-91f7-e1dde2db606c
+Driver info: io.appium.java_client.android.AndroidDriver
+Command: [75282d1b-29d4-4d80-9b00-d429dafdd422, findElement {using=-android uiautomator, value=new UiSelector().description(&quot;Open navigation menu&quot;)}]
+Capabilities {appium:appActivity: com.odysseynext.unionmutual..., appium:appPackage: com.odysseynext.unionmutual, appium:automationName: uiAutomator2, appium:databaseEnabled: false, appium:desired: {appActivity: com.odysseynext.unionmutual..., appPackage: com.odysseynext.unionmutual, automationName: uiAutomator2, deviceName: Test Device, platformName: ANDROID, platformversion: 14, uuid: emulator-5554}, appium:deviceApiLevel: 35, appium:deviceManufacturer: Nothing, appium:deviceModel: A063, appium:deviceName: P12278000659, appium:deviceScreenDensity: 420, appium:deviceScreenSize: 1080x2400, appium:deviceUDID: P12278000659, appium:javascriptEnabled: true, appium:locationContextEnabled: false, appium:networkConnectionEnabled: true, appium:pixelRatio: 2.625, appium:platformVersion: 15, appium:platformversion: 14, appium:statBarHeight: 136, appium:takesScreenshot: true, appium:uuid: emulator-5554, appium:viewportRect: {height: 2264, left: 0, top: 136, width: 1080}, appium:warnings: {}, appium:webStorageEnabled: false, platformName: ANDROID}
+Session ID: 75282d1b-29d4-4d80-9b00-d429dafdd422
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
@@ -167,10 +172,10 @@ Session ID: 3bc388bf-5110-4ff0-91f7-e1dde2db606c
 	at io.appium.java_client.remote.AppiumCommandExecutor.execute(AppiumCommandExecutor.java:250)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
 	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:66)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:359)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:353)
-	at com.unionmutualproject.Dashboard.DashboardPage(Dashboard.java:12)
+	at com.unionmutualproject.CreateQuote.createQuote(CreateQuote.java:23)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
@@ -206,9 +211,16 @@ Session ID: 3bc388bf-5110-4ff0-91f7-e1dde2db606c
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.unionmutualproject.Dashboard</span>
+              <span class="class-name">com.unionmutualproject.CreateQuote</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="DashboardPage">
+                  </a> <!-- DashboardPage -->
+                  <span class="method-name">DashboardPage</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="Transaction">
@@ -228,7 +240,7 @@ Session ID: 3bc388bf-5110-4ff0-91f7-e1dde2db606c
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Taurus11\AppData\Local\Temp\testng-eclipse--816105754\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Taurus11\AppData\Local\Temp\testng-eclipse--221972852\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -237,7 +249,7 @@ Session ID: 3bc388bf-5110-4ff0-91f7-e1dde2db606c
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.unionmutualproject.Dashboard&quot;/&gt;
+      &lt;class name=&quot;com.unionmutualproject.CreateQuote&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -277,24 +289,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'login')
-data.setCell(0, 2, 'com.unionmutualproject.Dashboard')
-data.setCell(0, 3, 20213);
+data.setCell(0, 2, 'com.unionmutualproject.CreateQuote')
+data.setCell(0, 3, 16801);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'DashboardPage')
-data.setCell(1, 2, 'com.unionmutualproject.Dashboard')
-data.setCell(1, 3, 4415);
+data.setCell(1, 2, 'com.unionmutualproject.CreateQuote')
+data.setCell(1, 3, 8828);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'Transaction')
-data.setCell(2, 2, 'com.unionmutualproject.Dashboard')
-data.setCell(2, 3, 2080);
+data.setCell(2, 2, 'com.unionmutualproject.CreateQuote')
+data.setCell(2, 3, 2137);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'createQuote')
+data.setCell(3, 2, 'com.unionmutualproject.CreateQuote')
+data.setCell(3, 3, 2118);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 seconds</span>
+              <span class="suite-total-time">Total running time: 29 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -320,7 +336,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.unionmutualproject.Dashboard</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.unionmutualproject.CreateQuote</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
@@ -328,16 +344,20 @@ return data;
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">DashboardPage</span>
-                <span class="method-start">11649 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Transaction</span>
-                <span class="method-start">16068 ms</span>
+                <span class="method-name">createQuote</span>
+                <span class="method-start">10222 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">18150 ms</span>
+                <span class="method-start">12346 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">DashboardPage</span>
+                <span class="method-start">29148 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Transaction</span>
+                <span class="method-start">37977 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
